--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -8,7 +8,7 @@
  }
 
  .md-typeset td > code,  .md-typeset article > code, .md-typeset p > code, .md-typeset a > code {
-    font-weight: 600;
+    font-weight: bolder;
     background: none;
     padding: 0;
   }
